css/style.css
body {
	text-align: center;
	font-family: Roboto, sans-serif;
	color: #1c1c1c;
	padding: 1rem;
}
h1 {
	margin: 2rem 0 1.7rem;
	font-size: 2.1rem;
	text-align: center;
	font-family: Roboto, sans-serif;
	color: white;
}
main {
	width: 80%;
	margin: 0 auto;
	border: 1px solid red;
}
#input {
	border: 1px solid #c9c9c9;
	padding: 1rem 2rem;
	background-color: #4679BD;
}
#group, #location, #distance, button {
	font-size: 1.1rem;
	margin-top: .6rem;
}
#group, #location, #distance {
	width: 175px;
	margin-right: .5rem;
}
#distance {
	width: 180px;
}
#group, #location {
	height: 1.5rem;
}
#group {
	color: #a3a3a3;
}
#distance, button {
	color: #0a0a0a;
}
button {
	width: 6rem;
	padding:5px 15px;
	background:#ccc; 
	border:0 none;
    cursor:pointer;
    -webkit-border-radius: 5px;
    border-radius: 5px;	
   	color: #3f3f3f;
}
label {
	color: black;
}
#distance {
	-webkit-appearance: menulist-button;
	appearance: menulist-button;
	background-color: rgb(255, 255, 255);
	border: 1px solid rgb(204, 204, 204);
	cursor: pointer;
	height: 30px;
}
#results {
	text-align: left;
	margin: 2rem 0;
	white-space: nowrap;
}
#map-canvas {
	display: inline-block;
	width: 50%;
	height: 25rem;
	vertical-align: top;
}
#group-list {
	display: inline-block;
	margin-left: 3rem;
	font-size: 1.1rem;
	line-height: 2.2rem;
	width: 42%;
	border: 1px solid green;
}
#group-list li {
	width: 42%;
}
#group-list li a {
	text-decoration: none;
	color: black;
}
#error {
	color: #d61d1d;
	font-size: 1.2rem;
	margin: 2rem 0;
}

/* Responsive Design */
@media only screen and (max-width: 1100px) {
	#map-canvas {
		width: 23rem;
		height: 19rem;
	}		
}
@media only screen and (max-width: 1000px) {
	main{
		width: 100%;
	}
	#group-list {
		font-size: 1rem;
		margin-left: 1.7rem;
	}
}

@media only screen and (max-width: 600px) {
	h1 {
		margin: .6rem 0 1.2rem;
		font-size: 1.8rem;
	}	
	main{
		width: 100%;
	}
	#group-list {
		font-size: 1rem;
		margin-left: 1.7rem;
	}
	body {
		padding: .5rem;
	}
	#input {
		text-align: left;
	}
	#group, #location, #distance, button {
		font-size: 1rem;
		margin-top: .3rem;
	}
	#map-canvas {
		width: 100%;
		float:left;
	}
	#group-list {
		float: left;
		margin-top: 1rem;
		font-size: .9rem;
	}
	#search-form {
		width: 200px;
	}
}
@media only screen and (max-width: 375px) {
	h1 {
		font-size: 1.6rem;
	}		
	#search-form {
		width: 200px;
		margin: 0 auto;
	}
}

